--- a/sub_13.html
+++ b/sub_13.html
@@ -246,6 +246,20 @@
 
 
 		@media (max-width:767px) {
+
+			.header-dual .article-header-wrap {
+				height: auto;
+			}
+
+			.header-dual .article-header-container {
+				grid-template-columns: 1fr;
+				row-gap: 2rem;
+			}
+
+			.article-body {
+				margin-top: 5rem;
+			}
+
 			.article-text {
 				padding-top: 0rem;
 				margin-top: 3rem;
