--- a/sub_22.html
+++ b/sub_22.html
@@ -181,6 +181,41 @@
 		}
 
 		@media (max-width:767px) {
+
+			.article-header-wrap {
+				height: auto;
+				padding-left: 0;
+				padding-right: 0;
+			}
+
+			.article-header-bg {
+				position: relative;
+				height: auto;
+			}
+
+			.article-header-bg figure {
+				width: 100%;
+				position: relative;
+			}
+
+			.article-header-container {
+				position: relative;
+				width: 100%;
+				transform: translateX(0) translateY(0);
+				left: 0;
+				padding: 1rem 5%;
+				display: block;
+			}
+
+			.article-header-image {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				width: 30%;
+				z-index: 2;
+				transform: translateX(-30%) translateY(10%);
+			}
+
 			.house-box div {
 				width: 70%;
 			}
