--- a/sub_33.html
+++ b/sub_33.html
@@ -87,8 +87,12 @@
 		}
 
 		@media (max-width: 767px) {
+			.article-header-text h2 {
+				font-size: 4rem;
+			}
+
 			.article-header-text h3 {
-				font-size: 3rem;
+				font-size: 2.4rem;
 			}
 
 			.article-header-text h4 {
