--- a/sub_44.html
+++ b/sub_44.html
@@ -155,28 +155,41 @@
 
 			figure.graphic-1 {
 				width: 30%;
-				right: 0;
-				top: auto;
-				left: auto;
-				bottom: 0;
-				transform: translateY(-10%);
+				left: 52%;
+				top: 0;
+				transform: translateY(-50%);
 			}
 
 			figure.graphic-2 {
-				top: auto;
 				bottom: 0;
-				right: 20%;
-				left: auto;
-				width: 10%;
+				top: auto;
+				left: 5%;
+				width: 40%;
+				transform: translateY(-10%);
 			}
 
 			figure.graphic-3 {
-				top: -20%;
+				top: 50%;
+				right: 10%;
+				bottom: auto;
+				left: auto;
+				width: 30%;
 			}
 
 			figure.graphic-4 {
 				bottom: 0;
-				width: 60%;
+				top: auto;
+				right: 10%;
+				left: auto;
+				width: 20%;
+				transform: translateY(-20%);
+			}
+
+			figure.graphic-5 {
+				top: 0;
+				right: 40%;
+				width: 20%;
+				transform: translateY(-30%);
 			}
 		}
 	</style>
