--- a/sub_45.html
+++ b/sub_45.html
@@ -106,6 +106,18 @@
 				width: 100%;
 			}
 
+			.nutri-grid {
+				grid-template-columns: 1fr;
+			}
+
+			.nutri-grid .left {
+				border-right: 1px solid var(--main-color);
+			}
+
+			.nutri-grid .right {
+				border-top: none
+			}
+
 
 		}
 	</style>
