--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		}
 
 		.dream-right-bottom figure img {
-			max-height: 30rem;
+			max-height: 100%;
 		}
 
 		.popup {
@@ -470,7 +470,7 @@
 		<section class="popup-zone">
 			<div class="popup" id="popup">
 				<div class="popup-container">
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfHIjdI8uSfllKq0w9QfkZ7rMY5aLBtATJO6AChZQh3LN7wIA/viewform"
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSe5TgNdziJe-l5O2LRMOiJktODFwWx49fi546WmiWXXZ7YB9g/viewform"
 						target="_blank">
 						<figure>
 							<img src="contents/main_popup.jpg">
