--- a/sub_31.html
+++ b/sub_31.html
@@ -146,8 +146,7 @@
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진제공</span>
-							<span>임보람</span><br>
-							<!-- <span class="pipe">ㅣ</span> -->
+							<span>김기현</span><br>
 							<span class="b">자료</span>
 							<span>똑똑청년농부</span>
 						</div>
