--- a/sub_32.html
+++ b/sub_32.html
@@ -209,14 +209,18 @@
 
 			.article-job .article-image {
 				position: relative;
-				transform: translateX(2rem);
+				left: 50%;
+				transform: translateX(-50%);
 				margin-bottom: 2rem;
+				margin-top: 2rem;
 			}
 
 			.article-job .article-image.right {
-				transform: translateX(90%);
+				transform: translateX(-50%);
 				position: relative;
 				margin-bottom: 2rem;
+				left: 50%;
+				right: auto;
 			}
 
 			.article-job-box::before {
