--- a/sub_44.html
+++ b/sub_44.html
@@ -308,6 +308,9 @@
 								성산일출봉
 							</h5>
 							<p>
+								영화의 주 무대인 제주 서귀포시 성산읍 삼달리에는 오래된 시간의 결이 고스란히 남아 있다. 그중에서도 단연 눈길을 끄는 곳이 성산일출봉이다.
+							</p>
+							<p>
 								제주도의 일반적인 오름과 달리, 성산일출봉은 바다 속에서 마그마가 분출하며 만들어진 독특한 수성 화산체다. 뜨거운 마그마가 차가운 바닷물을 만나는 순간
 								수증기가 치솟고, 그 과정에서 만들어진 화산재가 촉촉하고 끈끈한 성질을 띠며 층층이 쌓여 지금의 웅장한 형태가 되었다. 탐방로는 무료 구간과 유료 구간으로
 								나뉜다. 유료 탐방로는 정상까지 오르는 길로, 웅대한 분화구를 가장 가까이에서 만날 수 있다. 무료 탐방로는 성산일출봉 아래의 바다와 주변 풍경을 가볍게
