--- a/sub_45.html
+++ b/sub_45.html
@@ -53,6 +53,10 @@
 			text-align: center;
 		}
 
+		.article-text p {
+			letter-spacing: -0.01rem;
+		}
+
 		.nutri-grid {
 			display: grid;
 			grid-template-columns: 1.2fr 1fr;
