--- a/sub_43.html
+++ b/sub_43.html
@@ -174,18 +174,21 @@
 							농업이 만드는 새로운 치유의 길
 						</h6>
 						<p>
-							경기도는 전국에서 가장 먼저 치유농업의 가능성을 알아본 곳이다. 2019년 전국 최초로 ‘경기도 치유농업 육성 및 지원 조례’를 제정하며 제도적 기반을 마련했고,
-							2023년에는 전국 최초로 치유농업 전담 조직을 구성하고 전문 인력을 배치했다. 현재 경기도 31개 시·군 중 24곳이 치유농업 조례를 제정하며 함께 이 길을 걷고
+							경기도는 전국에서 가장 먼저 치유농업의 가능성을 알아본 곳이다. 2019년 전국 최초로 '경기도 치유농업 육성 및 지원 조례'를 제정하며 제도적 기반을 마련했고,
+							2023년에는 전국 최초로 치유농업 전담 조직을 구성하고 전문 인력을 배치했다. 현재 경기도 31개 시·군 중 23곳이 치유농업 조례를 제정하며 함께 이 길을 걷고
 							있다.
 						</p>
 						<p>
-							경기도농업기술원 치유농업센터는 6,560㎡ 규모의 치유 쉼터와 정원, 실내 교육시설과 치유 온실을 갖추고 있다. 이곳에서는 농촌진흥청이 개발한 검증된 프로그램을
-							바탕으로 노인, 장애인, 스트레스 성인 등 대상별 맞춤 프로그램을 운영한다. 참여자들은 콩과 보리를 활용한 작물 프로그램, 호랑나비와 귀뚜라미를 만나는 곤충
-							프로그램, 텃밭 정원 가꾸기 등을 통해 몸과 마음의 변화를 경험한다.
+							경기도농업기술원 치유농업센터는 6,905.5㎡ 규모의 치유 쉼터와 정원, 실내 교육시설과 치유 온실을 갖추고 있다. 이곳에서는 농촌진흥청이 개발한 검증된 프로그램을
+							바탕으로 노인, 장애인, 스트레스 성인 등 대상별 맞춤 프로그램을 운영한다. 참여자들은 콩과 보리를 활용한 식량작물 프로그램, 호랑나비와 귀뚜라미를 만나는 정서곤충
+							프로그램, 원예작물을 활용한 텃밭 정원 가꾸기 등을 통해 몸과 마음의 변화를 경험한다.
 						</p>
 						<p>
-							경기도는 치유 농업을 확산하기 위해 광역 치매센터, 사회서비스원, 국민건강보험공단 등 다양한 기관과 협력하고 있다. 도내 89개 치유농장이 46곳의 치매안심센터,
-							10곳의 사회서비스원과 연계하여 프로그램을 운영하며, 2024년 한 해에만 2만 명 이상이 치유농업 프로그램에 참여했다.
+							경기도는 치유 농업을 확산하기 위해 광역치매센터, 사회서비스원, 국민건강보험공단 등 다양한 기관과 협력하고 있다. 도내 89개 치유농장이 46개소의 치매안심센터,
+							9개 시군과 연계한 사회서비스원 프로그램을 운영하며, 2025년 한 해에만 2만 명 이상이 치유농업 프로그램에 참여했다.
+						</p>
+						<p>
+							경기도농업기술원은 농업이 단순히 먹거리를 생산하는 일을 넘어, 사람들의 건강과 행복을 돌보는 '치유의 장'이 될 수 있음을 보여주고 있다.
 							<i class="icon_last"></i>
 						</p>
 						<div class="farm-image-last">
@@ -202,11 +205,11 @@
 							<h6>Information</h6>
 							<p>
 								<span>주소</span><br>
-								경기도 화성시 봉담읍 와우안길 202-56
+								경기도 화성시 병점중앙로283-33
 							</p>
 							<p>
 								<span>문의</span><br>
-								031-229-5821
+								031-8008-9462
 							</p>
 						</div>
 					</div>
