--- a/sub_43.html
+++ b/sub_43.html
@@ -167,7 +167,7 @@
 				<div class="farm-grid">
 					<div class="farm-text">
 						<blockquote class="quote-farm">
-							잔디밭을 맨발로 걸으며 따스한 햇살을 느끼고,<br>
+							잔디밭을 걸으며 따스한 햇살을 느끼고,<br>
 							다양한 체험을 통해 자연과 교감하는 시간을 갖는다.
 						</blockquote>
 						<h6>
