--- a/sub_43.html
+++ b/sub_43.html
@@ -205,6 +205,7 @@
 							<h6>Information</h6>
 							<p>
 								<span>주소</span><br>
+								<span>경기도농업기술원</span><br>
 								경기도 화성시 병점중앙로283-33
 							</p>
 							<p>
